# nocopy

./: .dir-locals.el  .gitmodules  CMakeLists.txt  README.md
bundle/lambda_overload/include/lambda_overload/: lambda_overload.hpp
bundle/silence_dependencies/: README.md
bundle/silence_dependencies/include/silence_dependencies/: ignore_warnings.hpp
include/: nocopy.hpp
include/nocopy/: archive.hpp  array.hpp  arraypack.hpp  box.hpp  datapack.hpp  endianness.hpp  errors.hpp  field.hpp  heap.hpp  oneof.hpp  schema.hpp  static_asserts.hpp  structpack.hpp  tagged_union.hpp  version_range.hpp
include/nocopy/detail/: align_to.hpp  delegate.hpp  endianness.hpp  field_accessors.hpp  field_packer.hpp  ignore_warnings_from_dependencies.hpp  lambda_overload.hpp  little_endian.hpp  narrow_cast.hpp  oneof_packer.hpp  raw_heap.hpp  reference.hpp  traits.hpp  type_set.hpp
include/nocopy/fwd/: archive.hpp  array.hpp  box.hpp  datapack.hpp  field.hpp  heap.hpp  oneof.hpp  structpack.hpp
test/: archive.cpp  datapack.cpp  heap.cpp  oneof.cpp  raw_heap.cpp  schema.cpp  structpack.cpp
